--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="At Myvisapoint, we are recognized as the best immigration consultants in Chandigarh, offering a full range of immigration services in Chandigarh. Whether you aspire to study, work, or settle abroad, our expert team provides personalized and reliable solutions to help you achieve your goals. With a proven track record and in-depth knowledge of global immigration laws, we ensure a seamless and successful process from start to finish. Choose us for professional, transparent, and affordable immigration services in Chandigarh."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MyVisaPoint App</title>
+    <title>MyVisaPoint</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
